# voxel-garden

./: .gitlab-ci.yml  Cargo.toml  README.md  README.txt  ideas.typ  spec.typ
documents/: spec.typ
src/: camera.rs  main.rs  util.rs  utils.rs
src/models/: biomes.rs  flower.rs  mod.rs  primitives.rs  rock.rs  terrain.rs  terrarin.rs  tree.rs
src/shader/: mod.rs
src/shaders/: shader.frag  shader.vert
