[package]
name = "project"
version = "0.1.0"
edition = "2021"

[features]
default = ["egui"]
egui = ["dep:egui", "egui-miniquad"]

[dependencies]
egui = { version = "*", optional = true }
egui-miniquad = { git = "https://github.com/not-fl3/egui-miniquad", rev = "9cd86b60e26bb78e13445b6d56c13e56e86faba9", optional = true }
glam = { version = "0.25.0", features = ["scalar-math"] }
miniquad = "0.4.0"
ringbuffer = "0.15.0"
tobj = { version = "4.0.1", default-features = false }
# image = { version = "0.24.9", default-features = false, features = ["tga"] }
