[package]
name = "project"
version = "0.1.0"
edition = "2021"

[features]
default = ["egui"]
egui = ["dep:egui", "egui-miniquad", "puffin", "puffin_egui"]

[dependencies]
egui = { version = "0.27.0", optional = true, features = ["puffin"] }
egui-miniquad = { git = "https://github.com/not-fl3/egui-miniquad", rev = "5df57233a60f75faadfa14a3ad9d4cddde637605", optional = true }
glam = { version = "0.27.0", features = ["scalar-math"] }
miniquad = "0.4.0"
puffin = { version = "0.19.0", optional = true }
puffin_egui = { version = "0.27.0", optional = true }
tobj = { version = "4.0.1", default-features = false }
# image = { version = "0.24.9", default-features = false, features = ["tga"] }
